<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="self"
            type="com.github.kr328.clash.design.ConnectivityStatsDesign" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@{self.surface.insets.start}"
        android:paddingEnd="@{self.surface.insets.end}">

        <include
            android:id="@+id/main_list"
            layout="@layout/common_recycler_list"
            app:insets="@{self.surface.insets}" />

        <com.github.kr328.clash.design.view.ActivityBarLayout
            android:id="@+id/activity_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@{self.surface.insets.top}">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/item_tailing_margin">

                <include
                    layout="@layout/common_activity_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/sync_view" />

                <ImageView
                    android:id="@+id/sync_view"
                    android:layout_width="@dimen/item_tailing_component_size"
                    android:layout_height="@dimen/item_tailing_component_size"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/sync_interval_view"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/connectivity_stats_sync_now"
                    android:focusable="true"
                    android:onClick="@{() -> self.requestSync()}"
                    android:padding="@dimen/toolbar_image_action_padding"
                    android:src="@drawable/ic_baseline_sync" />

                <TextView
                    android:id="@+id/sync_interval_view"
                    android:layout_width="@dimen/item_tailing_component_size"
                    android:layout_height="@dimen/item_tailing_component_size"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/clear_all_view"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/connectivity_stats_sync_interval"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="@{() -> self.requestChooseSyncInterval()}"
                    android:text="@{self.syncIntervalLabel}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

                <ImageView
                    android:id="@+id/clear_all_view"
                    android:layout_width="@dimen/item_tailing_component_size"
                    android:layout_height="@dimen/item_tailing_component_size"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/item_tailing_margin"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/connectivity_stats_clear_all"
                    android:focusable="true"
                    android:onClick="@{() -> self.requestClearAll()}"
                    android:padding="@dimen/toolbar_image_action_padding"
                    android:src="@drawable/ic_baseline_clear_all" />
            </RelativeLayout>
        </com.github.kr328.clash.design.view.ActivityBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
